# WeatherForecast

./: .gitignore  PROJECT_SPEC.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/data/: era5_preprocess_sample.yaml  era5_sample.yaml
configs/experiment/: m0.yaml
src/weather_ai/: __init__.py  cli.py  config.py  logging.py
src/weather_ai/data/: __init__.py  client.py  config.py  diagnostics.py  errors.py  files.py  inspection.py  manifest.py  normalization.py  preprocessing.py  preprocessing_config.py  preprocessing_manifest.py  preprocessing_schemas.py  provenance.py  request.py  schemas.py  service.py  validation.py  variables.py
tests/: __init__.py  data_validation_helpers.py  preprocessing_helpers.py
tests/integration/: test_data_validation_cli.py  test_preprocessing_cli.py
tests/unit/: test_cli.py  test_config.py  test_data_validation.py  test_era5_config.py  test_era5_download.py  test_era5_request.py  test_preprocessing.py
